Fix: controller wasn't working on iOs

--- a/Assets/WebGLTemplates/AirConsole/css/style.css
+++ b/Assets/WebGLTemplates/AirConsole/css/style.css
@@ -42,8 +42,11 @@ body {
 
     display: grid;
     grid-gap: var(--button-padding-size);
-    grid-auto-rows: 1fr;
-    grid-auto-columns: 1fr;
+    grid-row: 5;
+    grid-column: 3;
+
+    grid-template-columns: repeat(4, calc((100vw - var(--button-padding-size) * 6) / 4));
+    grid-template-rows: repeat(2,calc((100vh - var(--button-padding-size) * 4) / 2));
 }
 
 .buttons {
@@ -85,6 +88,12 @@ body {
 
 #button_b>div>div {
     background-color: red;    
+}
+
+#button_a
+{
+    overflow: hidden;
+    font-size: 15vw;
 }
 
 #button_b>div {
